# AdventOfCode

./: .gitignore  LICENSE-MIT  README.md  get_input.py  setup.py  template.py
2015/day01/: sol.py
2015/day02/: sol.py
2015/day03/: sol.py
2015/day04/: sol.py
2015/day05/: sol.py
2015/day06/: sol.py
2015/day07/: sol.py
2019/: int.py
2019/intcode/compiler/: Cargo.toml  build.rs  test.i
2019/intcode/compiler/src/: ast.rs  codegen.rs  grammar.lalrpop  main.rs  parser.rs
2020/optimized/: Cargo.toml  README.md  _build.rs  expected.txt  parser_gen.py
2020/optimized/.cargo/: config
2020/optimized/src/: days.rs  input.rs  main.rs  slice_wrapper.rs  unreachable.rs  utils.rs
2020/optimized/src/days/: day01.S  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day23.rs  mod.rs
2021/optimized/bare/: Cargo.toml
2021/optimized/bare/src/: slice_wrapper.rs
day01/: input.txt  sol.py  sol1.py
day02/: sol.py
day04/: sol.py
day05/: input.txt  sol.py
day06/: input.txt  sol.py
day07/: input.txt
day09/: input.txt  soll.py
day10/: input.txt  sol.py
day11/: sol.py
day12/: input.txt  sol.py
day13/: input.txt  sol.py
day14/: sol.py
day15/: input.txt  sol.py
day16/: sol.py
day17/: input.txt  sol.py
day18/: sol.py
day19/: input.txt  sol.py
day20/: sol.py
day21/: input.txt  sol.py
day22/: sol.py
day23/: decompiled.txt  input_opt.txt  optimized.py  sol.py
day24/: input.txt
day25/: input.txt
leaderboard/: .gitignore  README.md  parse.py
(+440 files in other folders)
