[package]
name = "aoc-2020-optimized"
version = "0.1.0"
authors = ["Benedikt Werner <1benediktwerner@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
clap = "4"
rustc-hash = "2"
# regex = "*"
# libc = "0.2"

# [build-dependencies]
# cc = "1.0"
