[package]
name = "intcode-compiler"
version = "0.1.0"
authors = ["Benedikt Werner <1benediktwerner@gmail.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1"
clap = "2.33"
intcode-asm = { path = "../asm" }
intcode-vm = { path = "../vm" }

[build-dependencies]
lalrpop = "0.17.2"
